apps/proofstack/overlays/prod/patch-frontend-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: proofstack
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/kamomotov/proofstack-frontend@sha256:b94ba3d53f7750524ad628883dccd1f3a5c6ee6688527437bc1ec053bd991ef9
